--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -199,8 +199,33 @@ form {
 .address-form > form {
     min-width: 28rem;
     max-width: 100% !important;
+    border-radius: 0;
+    border: none;
+    padding: 0;
+    margin-top: 0;
 }
 
+.address-form > .form-row > .col-md-4 {
+    padding-right: 0;
+    padding-left: .55rem;
+}
+
+.modifyingAddress ::ng-deep.p-dropdown, .modifyingAddress ::ng-deep.p-dropdown.p-focus {
+    margin-top: 1.4rem;
+    margin-bottom: 3rem;
+}
+
+.modifyingAddress ::ng-deep.p-dropdown-items-wrapper {
+    max-height: 6rem !important;
+}
+
+.txtFormComponent ::ng-deep.mat-form-field-wrapper {
+    padding-bottom: 0
+}
+
+.address-form ::ng-deep.mat-form-field-appearance-standard .mat-form-field-flex {
+    padding-top: 0
+}
 .modifyingAddress .p-dialog {
     width: 54% !important;
 }
@@ -369,6 +394,7 @@ form {
 
 .table-container {
     min-width: 1115px;
+    max-width: 100%;
     overflow-x: auto;
     margin-bottom: 1rem;
 }
@@ -396,4 +422,64 @@ form {
     border: .0625rem solid #d1d9e6;
     box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
     color: #44476a !important;
+}
+
+.address-form ::ng-deep .p-dialog .p-dialog-header {
+    border-bottom: none;
+    color: #44476a;
+    background-color: transparent;
+    padding: 1rem;
+}
+
+.address-txt{
+    color: #333333;
+    padding: 0rem .75rem 0rem .75rem;
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    border-bottom: .1rem solid #85868a;
+    height: 1.8rem;
+    transition: ease-in-out;
+}
+
+.address-txt:hover{
+    transition: ease-in-out;
+    border-bottom: .2rem solid #44476a;
+}
+
+.p-field *{
+    display: block;
+    text-align: left;
+
+}
+
+.lblAddress{
+    color: #505152;
+    font-size: 11.3px;
+    margin-bottom: 0;
+    padding-bottom: .3rem;
+    margin-top: .6rem;
+}
+
+.sticky-column{
+    position: sticky;
+    left: 0;
+    z-index: 1;
+    background-color: #e6e7ee !important;
+}
+
+.sticky-header{
+    position: sticky;
+    left: 0;
+    z-index: 1;
+    border-top: 1rem solid transparent !important ;
+    background-color: #e6e7ee !important;
+}
+
+.fixed-th{
+    left: 3.9% !important;
+    background-color: #e6e7ee !important;
+    z-index: 1;
+    border-left: 1rem solid #e6e7ee !important ;
+
 }
